ignore original contents

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,19 @@
 /.idea/
 /.vscode/
 /.mvn/wrapper/maven-wrapper.jar
+/target/
+
+# original files
+/LICENSE
+/Makefile
+/README.md
+/jlox
+/asset/
+/book/
+/c/
+/java/
+/note/
+/site/
+/test/
+/tool/
+/util/
